# gov-ict-ticket-bot

./: .dockerignore  .env.example  .gitignore  DOCUMENTATION.md  Dockerfile  PRESENTATION.md  README.md  SCHOOL_PORTAL.md  ai_triage.py  bot.py  database.py  docker-compose.yml  generate_presentation.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
templates/: admin.html  admin_login.html  index.html  status.html  status_form.html  ticket.html
tests/: conftest.py  test_database.py  test_routes.py  test_triage.py
