[project]
name = "gov-ict-ticket-bot"
version = "1.0.0"
description = "Government ICT Service Ticket Bot"
requires-python = ">=3.9"

[tool.ruff]
target-version = "py39"
line-length = 90

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "SIM"]
ignore = ["S101"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
